--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.11.3",
+    "pdfmake": "^0.2.18",
     "pug": "^3.0.3",
     "sequelize": "^6.37.4",
     "socket.io": "^4.8.0"
